--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "patreon-poster",
   "type": "module",
   "private": true,
-  "scripts": {
-    "start": "node server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
-    "@playwright/test": "^1.46.0",
+    "playwright": "1.55.0",
     "express": "^4.18.2"
   }
 }
